采购单页面调整

--- a/core/app/views/Deliveryments/_box_number_model.html
+++ b/core/app/views/Deliveryments/_box_number_model.html
@@ -10,8 +10,8 @@
         </table>
       </div>
       <div class="modal-footer">
-        <button class="btn btn-default" data-dismiss="modal" aria-hidden="true">关闭</button>
-        <a class="btn btn-primary" id="submitDownloadFBAZIP">提交</a>
+        <button class="btn btn-default btn-xs" data-dismiss="modal" aria-hidden="true">关闭</button>
+        <a class="btn btn-primary btn-xs" id="submitDownloadFBAZIP">提交</a>
       </div>
     </div>
   </div>
