--- a/core/app/views/Deliveryments/_fba_carton_contents.html
+++ b/core/app/views/Deliveryments/_fba_carton_contents.html
@@ -3,14 +3,14 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h3 class="modal-title">FBA Carton Contents(默认数据来源于供应商的产品)</h3>
+        <h4 class="modal-title">FBA Carton Contents(默认数据来源于供应商的产品)</h4>
       </div>
       <div class="modal-body">
         <div id="refresh_div"></div>
       </div>
       <div class="modal-footer">
-        <button class="btn btn-default" data-dismiss="modal" aria-hidden="true">关闭</button>
-        <a class="btn btn-primary" id="sumbitDeployFBAs">提交</a>
+        <button class="btn btn-default btn-xs" data-dismiss="modal" aria-hidden="true">关闭</button>
+        <a class="btn btn-primary btn-xs" id="sumbitDeployFBAs">提交</a>
       </div>
     </div>
   </div>
