--- a/core/app/views/ProcureUnits/splitUnit.html
+++ b/core/app/views/ProcureUnits/splitUnit.html
@@ -1,140 +1,154 @@
-#{extends 'main.html'/}
+#{extends 'main_full_v3.html'/}
 #{set title:"分拆采购计划 #" + unit.id /}
 #{set 'moreScripts'}
     #{script 'procureunits/splitUnit.es6'/}
 #{/set}
-<style>
-  .table td, .table th{
-    vertical-align:middle;
-  }
-</style>
+
 #{errorMsgs /}
 
 #{if unit.isShipmentPlan()}
-    #{error_row }
+<div class="alert alert-danger" role="alert">
+  <ul>
     <li>当前采购计划所在的运输单已不是“计划中”状态，请与物流确认后再操作</li>
-    #{/error_row}
+  </ul>
+</div>
 #{/if}
 
+<div class="row">
+  <div class="col-md-12">
+    <div class="box box-primary">
+      <div class="box-header with-border"><h4 class="box-title">原始采购计划</h4></div>
+      <div class="box-body form-horizontal">
+        <div class="form-group">
+          <label class="col-sm-1 control-label">采购计划ID</label>
+          <div class="col-sm-2">
+            <input class="form-control" value="${unit.id}" readonly>
+          </div>
+          <label class="col-sm-1 control-label">历史变更</label>
+          <div class="col-sm-2">
+            <a href="@{ProcureUnits.detail(unit.id)}" target="_blank" class="btn btn-default" style="color:blue">查看>> </a>
+          </div>
+          <label class="col-sm-1 control-label">采购单</label>
+          <div class="col-sm-2">
+            <a href="@{Deliveryments.show(unit.deliveryment.id)}" target="_blank" class="btn btn-default" style="color:blue">${unit.deliveryment.id}</a>
+          </div>
+          <label class="col-sm-1 control-label">所属公司</label>
+          <div class="col-sm-2">
+            <input class="form-control" value="${unit.projectName}" readonly>
+          </div>
+        </div>
 
-#{warning_row title:'分拆注意事项'}
-<ul>
-  <li>如需分拆为其它SKU，只能分拆为同一个供应商下的其它SKU！</li>
-</ul>
-#{/warning_row}
-#{info_row title:'原始采购计划' /}
-<div class="row-fluid">
-  <div class="span12">
-    <table class="table table-bordered">
-      <tr>
-        <th>采购计划ID</th>
-        <td width="320px;">${unit.id}</td>
-        <th>历史变更</th>
-        <td width="300px;">
-          <a href="@{ProcureUnits.detail(unit.id)}" target="_blank">查看>> </a>
-        </td>
-        <td></td>
-        <td width="320px;"></td>
-      </tr>
-      <tr>
-        <th>Selling</th>
-        <td>${unit.selling?.sellingId}</td>
-        <th>SKU</th>
-        <td>${unit.sku}</td>
-        <th>产品名称</th>
-        <td><input type="text" style="width:300px;" value="${unit.product?.abbreviation}" readonly></td>
-      </tr>
-      <tr>
-        <th>去往仓库</th>
-        <td>${unit.whouse?.name}</td>
-        <th>供应商</th>
-        <td>${unit.cooperator.name}</td>
-        <th>采购数量</th>
-        <td>${unit.attrs.planQty}</td>
-      </tr>
-      <tr>
-        <th>预计交货时间</th>
-        <td>#{time_tooltip time:unit.attrs.planDeliveryDate/}</td>
-        <th>预计运输时间</th>
-        <td>#{time_tooltip time:unit.attrs.planShipDate/}</td>
-        <th>预计到库时间</th>
-        <td>#{time_tooltip time:unit.attrs.planArrivDate/}</td>
-      </tr>
-      <tr>
-        <th>单价</th>
-        <td>
-        ${unit.attrs.price.format("#.##")} ${unit.attrs.currency.name()}
-        #{if unit.containTax}<span class="label label-important">税点：${unit.taxPoint}</span>#{/if}
-        </td>
-        <th>阶段</th>
-        <td style="color:${unit.stage.rgb()}">${unit.stage?.label()}</td>
-        <th>采购单</th>
-        <td><a href="@{Deliveryments.show(unit.deliveryment.id)}" target="_blank">${unit.deliveryment.id}</a></td>
-      </tr>
-      <tr>
-        <th>运输方式</th>
-        <td style="color:${unit.shipType?.rgb()}">${unit.shipType?.label()}</td>
-        <th>所属公司</th>
-        <td>${unit.projectName}</td>
-        <td colspan="2"></td>
-      </tr>
-    #{if unit.stage.name()=='IN_STORAGE'}
-      <tr>
-        <th>入库时FBA</th>
-        <td>${unit.fba?.shipmentId}</td>
-        <th>当前仓库</th>
-        <td>${unit.currWhouse?.name}</td>
-        <th></th>
-        <td></td>
-      </tr>
-      <tr>
-        <th>收货数</th>
-        <td>${unit.attrs.qty}</td>
-        <th>入库数</th>
-        <td>${unit.inboundQty}</td>
-        <th>可用库存</th>
-        <td>
-        ${unit.availableQty}
-          (主箱数:${unit.mainBox?.boxNum} 每箱个数:${unit.mainBox?.num} 尾箱数:${unit.lastBox?.boxNum} 每箱个数:${unit.lastBox?.num})
-        </td>
-      </tr>
-    #{/if}
-    </table>
-  </div>
-</div>
-<input type="hidden" id="cooperId" value="${unit.cooperator?.id}">
-#{success_row title:'子采购计划'/}
-<div class="row-fluid">
-  <div class="span12">
-    <form action="@{ProcureUnits.doSplitUnit(unit.id)}" method="POST" id="splitUnitForm">
-    #{authenticityToken /}
-      <table class="table ta table-bordered">
-      #{if type}
-          #{include 'ProcureUnits/_splitOnSelling.html'/}
+        <div class="form-group">
+          <label class="col-sm-1 control-label">Selling</label>
+          <div class="col-sm-2">
+            <input class="form-control" value="${unit.selling?.sellingId}" readonly>
+          </div>
+          <label class="col-sm-1 control-label">SKU</label>
+          <div class="col-sm-2">
+            <input class="form-control" value="${unit.sku}" readonly>
+          </div>
+          <label class="col-sm-1 control-label">产品名称</label>
+          <div class="col-sm-2">
+            <input class="form-control" value="${unit.product?.abbreviation}" readonly>
+          </div>
+          <label class="col-sm-1 control-label">去往仓库</label>
+          <div class="col-sm-2">
+            <input class="form-control" value="${unit.whouse?.name}" readonly>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label class="col-sm-1 control-label">供应商</label>
+          <div class="col-sm-2">
+            <input class="form-control" value="${unit.cooperator.name}" readonly>
+          </div>
+          <label class="col-sm-1 control-label">采购数量</label>
+          <div class="col-sm-2">
+            <input class="form-control" value="${unit.attrs.planQty}" readonly>
+          </div>
+          <label class="col-sm-1 control-label">单价</label>
+          <div class="col-sm-2">
+            <input class="form-control" readonly value="${unit.attrs.price.format("#.##")} ${unit.attrs.currency.name()} #{if unit.containTax}(税点：${unit.taxPoint})#{/if}">
+          </div>
+          <label class="col-sm-1 control-label">阶段</label>
+          <div class="col-sm-2">
+            <input style="color:${unit.stage.rgb()}" class="form-control" value="${unit.stage?.label()}" readonly>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label class="col-sm-1 control-label">预计交货时间</label>
+          <div class="col-sm-2">
+            <input class="form-control" value="${unit.attrs.planDeliveryDate.date()}" readonly>
+          </div>
+          <label class="col-sm-1 control-label">运输方式</label>
+          <div class="col-sm-2">
+            <input class="form-control" style="color:${unit.shipType?.rgb()}" value="${unit.shipType?.label()}" readonly>
+          </div>
+          <label class="col-sm-1 control-label">预计运输时间</label>
+          <div class="col-sm-2">
+            <input class="form-control" value="${unit.attrs.planShipDate?.date()}" readonly>
+          </div>
+          <label class="col-sm-1 control-label">预计到库时间</label>
+          <div class="col-sm-2">
+            <input class="form-control" value="${unit.attrs.planArrivDate?.date()}" readonly>
+          </div>
+        </div>
+      #{if unit.stage.name()=='IN_STORAGE'}
+        <div class="form-group">
+          <label class="col-sm-1 control-label">入库时FBA</label>
+          <div class="col-sm-2">
+            <input class="form-control" value="${unit.fba?.shipmentId}" readonly>
+          </div>
+          <label class="col-sm-1 control-label">当前仓库</label>
+          <div class="col-sm-2">
+            <input class="form-control" value="${unit.currWhouse?.name}" readonly>
+          </div>
+          <label class="col-sm-2 control-label">收货数/入库数/可用库存</label>
+          <div class="col-sm-4">
+            <input class="form-control" readonly value="${unit.attrs.qty}/${unit.inboundQty}/${unit.availableQty}
+            (主箱数:${unit.mainBox?.boxNum} 每箱个数:${unit.mainBox?.num} 尾箱数:${unit.lastBox?.boxNum} 每箱个数:${unit.lastBox?.num})">
+          </div>
+        </div>
       #{/if}
-      #{else }
-          #{include 'ProcureUnits/_splitOnNoSelling.html'/}
-      #{/else}
-        <tr>
-          <td colspan="6">
-            <h4>Comment</h4>
-            <textarea rows="5" class="span12" name="newUnit.comment">${newUnit.comment.raw()}</textarea>
-          </td>
-        </tr>
-        <tr>
-          <td colspan="6">
-            <input type="hidden" name="newUnit.attrs.deliveryDate" value="${newUnit.attrs.deliveryDate.date()}">
-            <a href="@{Deliveryments.show(unit.deliveryment.id)}" class="btn btn-success">回到采购单</a>
-          #{power.ck "procures.dosplitunit"}
-            <button data-confirm="确认分拆前, 请再确认一次分拆的数量,地址等信息" class="btn btn-primary">
-              分拆
-            </button>
-          #{/power.ck}
-          </td>
-        </tr>
-      </table>
-      <input type="hidden" name="type" id="splitType" value="${type}">
-    </form>
+      </div>
+    </div>
+
+    <div class="box box-warning">
+      <div class="box-header with-border"><h4 class="box-title">子采购计划</h4></div>
+      <form action="@{ProcureUnits.doSplitUnit(unit.id)}" method="POST" id="splitUnitForm" class="form-horizontal">
+      #{authenticityToken /}
+        <div class="box-body">
+        #{if type}
+            #{include 'ProcureUnits/_splitOnSelling.html'/}
+        #{/if}
+        #{else }
+            #{include 'ProcureUnits/_splitOnNoSelling.html'/}
+        #{/else}
+          <div class="form-group">
+            <label class="col-sm-1 control-label">Comment</label>
+            <div class="col-sm-11">
+              <textarea rows="5" class="form-control" name="newUnit.comment">${newUnit.comment.raw()}</textarea>
+            </div>
+          </div>
+
+        </div>
+        <div class="box-footer">
+          <a href="@{Deliveryments.show(unit.deliveryment.id)}" class="btn btn-success">回到采购单</a>
+        #{power.ck "procures.dosplitunit"}
+          <button data-confirm="确认分拆前, 请再确认一次分拆的数量,地址等信息" class="btn btn-primary">
+            分拆
+          </button>
+        #{/power.ck}
+          <input type="hidden" name="newUnit.attrs.deliveryDate" value="${newUnit.attrs.deliveryDate.date()}">
+          <input type="hidden" name="type" id="splitType" value="${type}">
+        </div>
+
+      </form>
+    </div>
   </div>
 </div>
+
+<input type="hidden" id="cooperId" value="${unit.cooperator?.id}">
+
 
